tests/paczka1/fuzzy1/94601096.err
Error in line 12: MKte3 S346 87,6
Error in line 10: iD4m S580 28,9
Error in line 19: aclw A132 59,3
Error in line 37: iD4m S580 44,8
